2024-04-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Use QuantLib::Bond::Price in yield calculation
	* src/zero.cpp: Use QuantLib::Bond::Price in yield calculation

2024-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/Makevars.in (PKG_CXXFLAGS): No longer need -DBOOST_NO_AUTO_PTR

2024-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* R/asian.R: Remove three redundant duplicate methods available via
	class 'option' inherited from

2024-02-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.21
	* configure.ac: Idem
	* configure: Idem

	* .github/workflows/ci.yaml (jobs): Update to checkout@v4, switch to
	using r-ci-setup action

2024-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* .github/workflows/windows.yaml: Dialed down to r-release only

2024-01-25  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Generalized to also support arm64 on Windows
	* src/Makevars.win: Idem
	* src/utils.cpp: Accomate cmake-generated version string
	* .github/workflows/windows.yaml: Added

2024-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

2024-11-06  Jeroen Ooms  <jeroenooms@gmail.com>

	* configure.ac: Use universal build macOS build of QuantLib 1.31.1
	* configure: Idem

2023-11-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.20
	* configure.ac: Idem
	* configure: Idem

	* man/AffineSwaption.Rd: Add missing `\code` before stray `{}`
	* man/BermudanSwaption.Rd: Ditto
	* man/SabrSwaption.Rd: Ditto

	* src/affine.cpp (calibrateModel2): Adjust printf format string
	* src/bermudan.cpp (calibrateModel): Ditto

	* man/CallableBond.Rd: Wrap example in 'if (interactive())' to not
	run afould example computation time
