@@ -3,6 +3,10 @@
 	* src/bonds.cpp: Use QuantLib::Bond::Price in yield calculation
 	* src/zero.cpp: Use QuantLib::Bond::Price in yield calculation
 
+	* R/zzz.R (.onAttach): Protect version comparison from possible '-rc'
+	in release candidate builds
+	* inst/tinytest/test_schedule.R: Idem
+
 2024-03-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release and date
